# fews-3di

./: .coveragerc  .gitignore  .nens.toml  CHANGES.rst  DEVELOPMENT.rst  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/actions/: test.yml
.github/workflows/: nens-meta.yml  release.yml  test.yml
fews_3di/: scripts.py  simulation.py  template.xml  utils.py
fews_3di/output/: results_3di.nc
fews_3di/tests/: conftest.py  evaporation.nc  example_lateral.csv  example_settings.xml  ow.nc  precipitation.nc  settings_with_username.xml  settings_without_api_token.xml  settings_without_username.xml  test_scripts.py  test_simulation.py  test_utils.py
original/: runPythonScript.bat
original/input/: evaporation_894.nc  precipitation_894.nc
original/src/: 3DiSimulation.py  convert.py  lateral_csv_parser.py  netcdf_utils.py  settings.py
